--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -298,6 +298,7 @@ br.clear {
   line-height: 100%;
   color: #333;
   border: none;
+  display: block;
 }
 .main-nav li a:hover {
   text-decoration: none;
@@ -1183,17 +1184,38 @@ a.intro-nav-link-security {
   text-decoration: none;
   color: #fff;
 }
-
+a.cta-small {
+ float: left; 
+ margin-left: 0;
+}
+#cta-1 {
+  margin-top: 30px;
+}
+#cta-2 {
+  margin: 10px 0px;
+}
+#cta-3 {
+}
 .intro-text {
-  background: #f9f7f6;
-  padding: 30px 0;
+  background: #fff;
+  padding: 0px 0 30px;
   float: left;
   width: 100%;
+  color: #666;
   
 }
-.intro-text p {
-  color: #666;
+.intro-text h2 {
+  color: #000;
 }
+.intro-text .span8 {
+
+}
+.intro-text li {
+  margin-left: 50px;
+  width: 460px;
+  margin-bottom: 10px;
+}
+
 .comic-strip {
   float: left;
   width: 100%;
@@ -1263,7 +1285,7 @@ a.intro-nav-link-security {
   color: #666;
 }
 #how-it-works {
-  background: url(/assets/how-it-works-map.jpg) no-repeat center;
+  background: url(/assets/how-it-works-map.jpg) no-repeat center 200px;
 }
 .pencil-line {
   background: url(/assets/pencil-line.png) no-repeat center top;
@@ -1311,6 +1333,10 @@ a.intro-nav-link-security {
 .popup-intro {
 	margin:0 0 30px 20px;  
 
+}
+.bottom-paragraph {
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 
