--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,9 @@
       =Settings.site_name
       ="- #{@page_title}" if @page_title.present?
     =stylesheet_link_tag("application")
+    <!--[if IE 6]>
+    =stylesheet_link_tag("ie6")
+    <![endif]-->
     =javascript_include_tag("application")
     =csrf_meta_tags
     =yield :head
