--- a/app/views/wireframes/intro_nl.html.haml
+++ b/app/views/wireframes/intro_nl.html.haml
@@ -37,50 +37,58 @@
         .container
           .row
             .span8.offset2
-              %h2.center Help people out around you. It feels good.
-              %p.center Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at 
+              %h2.center Help people out around you. It feels good.              
+              %p.center We'd like to join with you in making your neighbourhood a better place by helping people to help their neighbours:
+              %ul
+                %li
+                  a) because we believe most people want to be helpful and
+                %li
+                  b) because we hope everyone and every neighbourhood 
+                  will be better off by doing so
+              %p.center
+                So what is Neighbours Can Help...what's it all about........?
       #comic-1.comic-strip
         .container
           .row
             .span12.comic-strip-inner
               .comic-text
                 %p
-                  In today’s society, many people can live in a  community for months, or even years, before getting to know their neighbours.
+                  Sometimes it can be hard to get to know our neighbours.
       #comic-2.comic-strip
         .container
           .row
             .span12.comic-strip-inner
               .comic-text
                 %p
-                  People often don’t know their neighbours because they don’t know their needs. And that’s because it’s not easy asking for help from a stranger.          
+                  Even though we could often help each other, it’s difficult to ask if we’re strangers.          
       #comic-3.comic-strip
         .container
           .row
             .span12.comic-strip-inner      
               .comic-text
                 %p
-                  This website aims to help neighbours connect to each other, local service providers & community organisations - so that they can offer and request help whenever it’s needed. 
+                  NCH is a new website to help neighbours to connect to each other. It’s quick, easy and free to use.
       #comic-4.comic-strip
         .container
           .row
             .span12.comic-strip-inner      
               .comic-text
                 %p
-                  Neighbours Can Help believes that by breaking down barriers created by garden fences, we can open up a whole new avenue for neighbourhood altruism to emerge.    
+                  Its aim is to strengthen communities by making it easier for people to help each other.
       #comic-5.comic-strip
         .container
           .row
             .span12.comic-strip-inner      
               .comic-text
                 %p
-                  The organisation hopes the new website will enable people to make new friends, share experiences and offer support to each other all year round.      
+                  By finding new ways to support each other we hope to build better neighbourhoods together.      
       #comic-6.comic-strip
         .container
           .row
             .span12.comic-strip-inner      
               .comic-text
                 %p
-                  Neighbours Can Help believes that together we can strengthen our communities, enabling people to come together to deliver a locally based response to the many needs hidden in every UK street.
+                  Make a difference to your community!
       #how-it-works.intro-strip
         .container
           .row
@@ -88,31 +96,73 @@
               %h2 How it works
             .span4  
               %p
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum.
+                %strong
+                  Well hopefully, something like this........
+              %p    
+                You decide you want to be part of a movement to help people in your neighbourhood get to know each other better, get to help each other more and get to strengthen your street’s sense of community.  
+                You sign up to Neighbours Can Help (use the Register or Get involved button) and tell all your neighbours, friends and family about it.
+              =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-1", :class=>"cta-intro cta-small"
             .span4
               %p
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.              
+                %strong
+                  Then what next?
+              %p    
+                We monitor every postcode, and when we’ve got enough people signed up in your street to make it work, we’ll make the site fully live in your area and let everyone in your postcode know about it.  Then because there will be enough neighbours in a given area to make it work, you’ll be at the forefront of a new wave of community involvement, where you and your neighbours can genuinely help each other more than before......
+                But only if you want to !!  It’s quick, easy and under your own control.
+                You can start and stop whenever you want…and you can ask for, and also give, as much or as little help as you like…              
+            .span12.pencil-line.mb-2
+            .span6
+              %p
+                %strong
+                  Why can’t you just make the site live for everyone?
+              %p    
+                Because all the advice we are getting from all those clever internet people who know about these things, points to one thing.......If you launch a social networking site with too few users, it will just fade away.......or become “moribund” if that’s the right word !
+                You’ve got to have enough neighbours signed up in a given street so that when someone joins, they have someone else in the street they can ask for help from or someone to possibly help !!  
+            .span6    
+              %p
+                So that’s where your support for this as an idea, by letting all your friends, family and neighbours know will really help to get things started.
+                So, if you think it’s a good idea, please sign up.
+              =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-3", :class=>"cta-intro cta-small"  
             .span12.pencil-line    
+                
 
                 
       #security.intro-strip
         .container
           .row
             .span8.offset4
-              %h2 Security
+              
             .span4.offset4
+              %h3 Long term ambitions
               %p
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.
+                We have already launched this site in Maltby because at Neighbours Can Help we've had a long standing connection with Maltby through The Maltby Model Village Community Association, South Yorkshire Housing Association, South Yorkshire Police Community Safety Team, Maltby Town Council and Maltby Academy. 
+                And we'd like to say a BIG THANK YOU to them all for their help and support!
             .span4
+              %h3 Sheffield Next!
+              %p                
+                Neighbours Can help is actually a Sheffield organisation and we’d LOVE to get it working properly in our home town!!
+                We will be making areas of Sheffield live next – all depending upon where and how much support we get.....even if we get enough people in just one street, our clever computer system will allow us to launch in that street !!.....so sign up here now.....
+              =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-2", :class=>"cta-intro cta-small"
+            .span12.pencil-line
+            .span8.offset2.center.bottom-paragraph
               %p
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.  
+                And eventually, we would like to see this website used to meet
+                %br
+                the many hidden needs in every street within the UK.
+              %p  
+                So if you agree with this long term ambition, please sign up and encourage others to do the same....and remember there's no long term commitment ; it's not neighbours MUST help or neighbours OUGHT TO help - it's neighbours CAN help.....and only if and when they want to. We just happen to believe they will.....
+                Thank you !
+              %p
+                John, David, Rose and Ange
+                %br
+                The Neighbours Can Help Team
       #big-cta
         .container
           .row
             .span6.offset3
               .well
                 %h2 Be part of it
-                =link_to "Get involved", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
+                =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :class=>"cta-intro"
                 .clearfix
               =link_to "Top", "#top", :class=>"to-top-link"
 
