updated preregister wireframes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1338,6 +1338,13 @@ a.cta-small {
   margin-top: 30px;
   margin-bottom: 20px;
 }
+/*========== preregistering pages ==========*/
+
+ .elsewhere-list li {
+	margin: 0 0 4px;
+
+  
+}
 
 
 
