--- a/app/views/wireframes/_sign_up_popup.html.haml
+++ b/app/views/wireframes/_sign_up_popup.html.haml
@@ -25,6 +25,7 @@
           .control-group
             .controls
               %button.btn.btn-primary.btn-large{:type => "submit"} Go
+              =link_to "coming soon page", "/wireframes/coming_soon_in_your_area"
               
               
                 
