--- a/app/views/pages/views/about_view.haml
+++ b/app/views/pages/views/about_view.haml
@@ -86,7 +86,7 @@
           %p    
             You decide you want to be part of a movement to help people in your neighbourhood get to know each other better, get to help each other more and get to strengthen your street’s sense of community.  
             You sign up to Neighbours Can Help (use the Register or Get involved button) and tell all your neighbours, friends and family about it.
-          =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-1", :class=>"cta-intro cta-small"
+          =link_to "Get involved", "#sign-up-popup", :id=>"cta-1", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
         .span4
           %p
             %strong
@@ -107,7 +107,7 @@
           %p
             So that’s where your support for this as an idea, by letting all your friends, family and neighbours know will really help to get things started.
             So, if you think it’s a good idea, please sign up.
-          =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-3", :class=>"cta-intro cta-small"  
+          =link_to "Get involved", "#sign-up-popup", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
         .span12.pencil-line    
           
 
@@ -127,7 +127,7 @@
           %p                
             Neighbours Can help is actually a Sheffield organisation and we’d LOVE to get it working properly in our home town!!
             We will be making areas of Sheffield live next – all depending upon where and how much support we get.....even if we get enough people in just one street, our clever computer system will allow us to launch in that street !!.....so sign up here now.....
-          =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :id=>"cta-2", :class=>"cta-intro cta-small"
+          =link_to "Get involved", "#sign-up-popup", :id=>"cta-2", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
         .span12.pencil-line
         .span8.offset2.center.bottom-paragraph
           %p
@@ -147,6 +147,7 @@
         .span6.offset3
           .well
             %h2 Be part of it
-            =link_to "Get involved", "http://neighbourscanhelp.org.uk/registrations/new", :class=>"cta-intro"
+            =link_to "Get involved", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
             .clearfix
           =link_to "Top", "#top", :class=>"to-top-link"
+=render ('/wireframes/sign_up_popup')                 
