--- a/app/views/wireframes/coming_soon_in_your_area_nl.html.haml
+++ b/app/views/wireframes/coming_soon_in_your_area_nl.html.haml
@@ -44,14 +44,15 @@
               %h3
                 We are launching soon in Sheffield!
             .preregister-share.span8.offset2.mb-2
-              %p
-                Share with friends to help grow the community
-              =link_to "#", :class=>"share-btn facebook-share-btn btn" do
-                %i.icon-facebook
-                Share on Facebook
-              =link_to "#", :class=>"share-btn twitter-share-btn btn" do
-                %i.icon-twitter
-                Share on Twitter
+              .well
+                %p
+                  Share with friends to help grow the community
+                =link_to "#", :class=>"share-btn facebook-share-btn btn" do
+                  %i.icon-facebook
+                  Share on Facebook
+                =link_to "#", :class=>"share-btn twitter-share-btn btn" do
+                  %i.icon-twitter
+                  Share on Twitter
             .preregister-i-can-help-with.span8.offset2
               %p
                 I can help with
