--- a/app/views/pre_registrations/not_in_your_area.html.haml
+++ b/app/views/pre_registrations/not_in_your_area.html.haml
@@ -10,7 +10,9 @@
 
         %h3
           We have 12 users in your area, but need more before we can launch
-      
+      .preregister-share.span8.offset2.mb-2
+        .well
+          =render("/pre_registrations/share_buttons")      
       .preregister-existing.span8.offset2
         %h3.mb-1
           Elsewhere
