Fix grammar and style

--- a/app/views/home/preregister.html.haml
+++ b/app/views/home/preregister.html.haml
@@ -6,15 +6,15 @@
     .row
       .span8.offset2
         %h2.center Help people out around you. It feels good.              
-        %p.center We'd like to join with you in making your neighbourhood a better place by helping people to help their neighbours:
+        %p.center We'd like to join with you in making your neighbourhood a better place by helping people to help their neighbours because:
         %ul
           %li
-            a) because we believe most people want to be helpful and
+            we believe most people want to be helpful and
           %li
-            b) because we hope everyone and every neighbourhood 
+            we hope everyone and every neighbourhood 
             will be better off by doing so
         %p.center
-          So what is Neighbours Can Help...what's it all about........?
+          So what is Neighbours Can Help? What's it all about?
 #comic-1.comic-strip
   .container
     .row
