--- a/app/views/layouts/logged_out/_body.html.haml
+++ b/app/views/layouts/logged_out/_body.html.haml
@@ -1,9 +1,5 @@
--content_for :head do
-  :javascript
-    $(document).ready(function() {
-      IntroPageNav.init();
-    });
 -body_tag(:'data-spy'=>"scroll", :'data-target' => ".header-intro", :'data-offset'=> 110) do
+  =yield :foobar
   .main-wrapper
     =render("layouts/logged_out/header")
     =yield_with_bootstrap(render_flash, :container_class => "container flash_container") if flash.present?
