--- a/app/views/layouts/logged_out/_header.html.haml
+++ b/app/views/layouts/logged_out/_header.html.haml
@@ -7,8 +7,14 @@
           =link_to "Neighbours Can Help", "/", :class=>"logo-intro-link"
         =link_to "Get involved", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
         =link_to "Login", "/login", :class=>"intro-nav-link-login intro-nav-link"
-        %ul.nav.nav-intro.unstyled                
-          %li=link_to "About", "#comic-1", :class=>"intro-nav-link-about intro-nav-link"
-          %li=link_to "How it works", "#how-it-works", :class=>"intro-nav-link-how intro-nav-link"
-          %li=link_to "Security", "#security", :class=>"intro-nav-link-security intro-nav-link"
+        -if controller_name == 'home'
+          %ul.nav.nav-intro.unstyled.scroll-nav           
+            %li=link_to "About", "#comic-1", :class=>"intro-nav-link-about intro-nav-link"
+            %li=link_to "How it works", "#how-it-works", :class=>"intro-nav-link-how intro-nav-link"
+            %li=link_to "Security", "#security", :class=>"intro-nav-link-security intro-nav-link"
+        -else
+          %ul.nav.nav-intro.unstyled            
+            %li=link_to "About", "/#comic-1", :class=>"intro-nav-link-about intro-nav-link"
+            %li=link_to "How it works", "/#how-it-works", :class=>"intro-nav-link-how intro-nav-link"
+            %li=link_to "Security", "/#security", :class=>"intro-nav-link-security intro-nav-link"
           
