--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,10 +83,16 @@
 }
 
 /*========== Font stuff ==========*/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700);
+
 .subnav_link, #social_media_links ul li a  {
 	font-weight: 300;
 	font-size: 15px;
 	color: #777;
+}
+body, p {
+  font-family: open sans, helvetica, arial, sans-serif;
+  -webkit-font-smoothing:antialiased;
 }
 
 /*========== General ==========*/
@@ -264,6 +270,7 @@ br.clear {
   float: left;
   width: 240px;
   margin: 20px 0 0 15px;
+  font-size: 30px;
 }
 #site_logo span.badge {
   float: right;
@@ -380,13 +387,30 @@ br.clear {
 /*========== Flash ==========*/
 
 .flash_container {
-  margin-top:-25px;
+  margin-top:0px;
+  width: 100%;
+  background: #8bd7dd;
+  color: #fff;
+
+  -webkit-box-shadow:inset 1px 1px 4px rgba(0,0,0,0.2);  
+  box-shadow:inset 1px 1px 4px rgba(0,0,0,0.2);
 }
 
 .flash_container .alert {
-  margin-bottom:15px;
-}
+  margin-bottom:0px;
+  background: none;
+  padding: 20px;
+  border: none;
+  color: #fff;
 
+  text-shadow: none;
+  font-weight: bold;  
+}
+.flash_container .span12 {
+  margin: 0 auto;
+  float: none;
+
+}
 /*========== Homepage ==========*/
 #home-intro {
 	background: url(/assets/home_intro.png) center -50px no-repeat;
@@ -395,22 +419,70 @@ br.clear {
   position: relative;
   width: 100%;
 }
+#home-intro-2 {
+	background: url(/assets/home_intro_2.jpg) center 0px no-repeat;
+  height: 430px;
+  float: left;
+  position: relative;
+  width: 100%;
+  margin:0 0 50px
+}
+.home-intro-inner {
+  position: relative;
+}
+.home-cta {
+  display: block;
+  position: absolute;
+  background:#7288c1;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  padding:10px 20px;
+  top: 210px;
+  right: 120px;
+  box-shadow:1px 1px 6px rgba(0,0,0,0.1);
+  
+  -webkit-border-radius:40px;
+  border-radius:40px;
+}
+.home-cta:hover {
+  color: #fff;
+  text-decoration: none;
+  
+  box-shadow:1px 1px 4px rgba(0,0,0,0.4);
+}
+a.home-cta-get-involved {
+  top: 280px;
+  right: 120px;
+  background: #73bca8;
+}
+.illustration-link {
+  display: block;
+  text-indent: -9000em;
+  position: absolute;
+  width: 530px;
+  left: 90px;
+  top: 130px;
+  height: 300px;
+}
 .home-intro-text {
 	text-align: center;
 	float: left;
 	width: 100%;
 	color: #b3b070;
-	font-size: 33px;
+	font-size: 26px;
 	line-height: 1.1;
 
 }
 .home-welcome {
-  margin: 20px 0 4px;
+  margin: 50px 0 4px;
   color: #333;
+  text-shadow: 2px 2px 2px #f6f5f1;
 }
 .home-where {
   font-weight: normal;
   color: #999;
+  text-shadow: 2px 2px 2px #f6f5f1;
 }
 .what-help {
 	background: #b08193;
@@ -826,12 +898,13 @@ html, body {
 	clear: both;
 	height: 60px;
 }
+
 .footer{
   border-top: 1px solid #EEE;
   margin-top: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: #BFBFBF;
+
   float: left;
   width: 100%;
 }
@@ -846,6 +919,15 @@ html, body {
 	margin: 5px 0 0 20px;
 	width: 170px;
 	height: 70px;
+}
+.footer-links {
+  float: left;
+  clear: left;
+}
+.footer-links a {
+  padding: 2px 0px;
+  float: left;
+  clear: left;
 }
 a.yoomee-logo {
 	background: url(/assets/yoomee_logo.png) no-repeat top right;
@@ -1070,9 +1152,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 
 /*========== intro page ==========*/
 .header-intro {
-  background: #fff;
+  background: #fff url(/assets/nav-strip.png) repeat-x bottom;
+  padding-bottom: 0px;
+  margin: 0 0 40px;
   
+  -webkit-box-shadow:0 1px 8px rgba(0,0,0,0.1);
+  box-shadow:0 1px 8px rgba(0,0,0,0.1);
+  
+  
+  z-index: 100;
   height: 116px;
+}.controller_home .header-intro {
+  margin-bottom: 0;
+}
+.header-intro-inner {
+  position: relative;
 }
 .logo-intro {
   display: block;
@@ -1090,6 +1184,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   margin: 15px 0 0;
 }
 
+#logged-in-user-button {
+  float: right;
+  margin: 36px 0 0 35px;
+}
 
 @-webkit-keyframes nav_reset {
   0% {
@@ -1150,24 +1248,35 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   margin: 0 0 0 30px;
 }
 .intro-nav-link {
-  color: #999;
+  color: #333;
   display: block;
   text-align: center;
+  font-weight: bold;
+  font-size: 20px;
  
 }
+.header-intro li.active a,
+.root_slug_about .intro-nav-link-about,
+.controller_home .intro-nav-link-home,
+.root_slug_news .intro-nav-link-latest
+ {
+  color:#98cd41;
+  line-height: 1;
+
+}
 .intro-nav-link-login {
-  float: right;
-  margin: 40px 13px 0 23px;
+	margin:  0 10px 0 50px;
+
 }
 .header-intro-fixed .intro-nav-link-login {
   margin-top: 23px;
 }
 
 a.intro-nav-link-about {
-	width: 55px;
+
 }
 a.intro-nav-link-how {
-	width: 105px;
+
 }
 a.intro-nav-link-security {
 	width: 65px;
@@ -1175,6 +1284,33 @@ a.intro-nav-link-security {
 }
 .nav a.intro-nav-link:hover {
 	 background: none;
+}
+.help-link {
+  position: absolute;
+  top: 108px;
+	color: #fff;
+	background: #619a5f;
+  padding: 1px 11px;
+  font-size: 13px;
+  right: 0px;
+  font-weight: bold;
+  
+  z-index: 30;
+
+
+     -moz-border-radius-bottomleft:5px;
+     -moz-border-radius-bottomright:5px;
+     -webkit-border-bottom-right-radius:5px;
+     -webkit-border-bottom-left-radius:5px;
+     border-bottom-right-radius:5px;
+     border-bottom-left-radius:5px;
+     
+     
+     box-shadow:1px 2px 2px rgba(0,0,0,0.15);
+
+}
+.help-link:hover {
+  color: #fff;
 }
 .cta-intro {
   float: right;
@@ -1187,6 +1323,10 @@ a.intro-nav-link-security {
   -webkit-border-radius:3px;
   
   margin: 30px 0 0 20px;
+}
+.header-intro .cta-intro {
+  font-weight: bold;
+  font-size: 20px;
 }
 .cta-intro:hover {
   text-decoration: none;
@@ -1243,7 +1383,7 @@ a.cta-small {
 .comic-text p {
 	font-size: 22px;
 	line-height: 1.3;
-	font-weight: 200;
+
 }
 #comic-1 {
   background: #dcd7d3 url(/assets/comic-1.jpg) no-repeat bottom center;
@@ -1328,11 +1468,7 @@ a.cta-small {
   width: 100%;
 }
 
-.header-intro li.active a {
-  color:#000;
-  line-height: 1;
-  font-weight: bold;
-}
+
 
 .to-top-link {
   display: block;
