--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,27 +3,30 @@
     $(document).ready(function() {
       NeedSelect.init();
     });
-#home-intro
-  .home-intro-text
-    %h2.home-welcome.home-intro-text
-      -if current_user
-        ="Hi #{current_user}, welcome to Neighbours Can Help"
-      -else
-        Welcome to Neighbours Can Help
-    %h3.home-where.home-intro-text ..where neighbours are helping each other
-  .intro-circles  
-    %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
-    %i#circle2.icon-user.intro-circle-icon.circle1.fade_in.fade_two
-    %i#circle3.icon-user.intro-circle-icon.circle2.fade_in.fade_three
-    %i#circle4.icon-user.intro-circle-icon.circle3.fade_in.fade_four  
-    %i#circle5.icon-user.intro-circle-icon.circle4.fade_in.fade_five     
-    %i#circle6.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
-    %i#circle7.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
-.what-help
-  %h2.what-help-text What help would you like?
-  =select_tag(:need_category, options_for_select([["Please select...", nil]] + NeedCategory.select_options.map{|nc| [nc.to_s,nc.id]}), :id => "what-help-select")
+.container
+#home-intro-2
+  .container
+    .row
+      .span12.home-intro-inner
+        .home-intro-text
+          %h2.home-welcome.home-intro-text
+            -if current_user
+              ="Hi #{current_user}, welcome to Neighbours Can Help"
+            -else
+              Welcome to Neighbours Can Help
+          %h3.home-where.home-intro-text ..where neighbours are helping each other
+        =link_to_slug('Find out more', :about, :class=>"illustration-link")  
+        =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
+        =link_to "Get involved", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
 
--if current_user
-  =link_to "I'd like to offer some help", needs_path, :class=>"home-help-link"
--else
-  =link_to "I'd like to offer some help", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'
+
+.container
+  .row
+    .span8.offset2
+      %h3.center I can't find 'Neighbours who've been helped' and 'Neighbours who need help'- have you put it anywhere Andy?
+
+-if false
+  -if current_user
+    =link_to "I'd like to offer some help", needs_path, :class=>"home-help-link"
+  -else
+    =link_to "I'd like to offer some help", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'
