--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -1,20 +1,15 @@
-.container#header
-  .row#header-row
-    .span5
-      %h1#site_logo
-        =link_to "/" do
-          =image_tag "logo.png"
-          %span.site_title
-            Neighbours Can Help
+#top
+#header-intro.header-intro        
+  .container.header-intro-inner
+    .row
+      .span12   
+        %h1.logo-intro
+          =link_to "Neighbours Can Help", "/", :class=>"logo-intro-link"
           -if STAGING
             %span.badge.badge-warning Staging
-    .span7
-      #header-links
-        #help-links
-          %icon.icon-question-sign
-          =link_to_slug(:help, :class=>"nav-link")
+       
         -if current_user
-          .btn-group
+          #logged-in-user-button.btn-group
             =link_to(current_user, :class => 'btn') do
               %icon.icon-user
               =current_user.full_name
@@ -49,57 +44,12 @@
               %li
                 =link_to(sign_out_path, :method => :delete) do
                   %icon.icon-signout
-                  =t(:logout)
-        -else
-          =link_to "Login", sign_in_path, :class=>"nav-link btn"
-          =link_to "Register", new_registration_path, :class=>"nav-link btn"
-.nav-strip  
-  .container                
-    .row
-      .span12              
-        #nav.main-nav
-          %ul.nav.nav-tabs
-            =li_with_active(current_page?(root_path), link_to("My Neighbourhood", root_path, :class=>"nav-link"))
-            =li_with_active(@page && @page.slug == "about", link_to_slug(:about, :class=>"nav-link"))
-            =li_with_active(@page && (@page.slug == "news" || @page.descendant_of_slug("news")), link_to_slug(:news, :class=>"nav-link"))
-            =li_with_active(@page && (@page.slug == "safety_tips" || @page.descendant_of_slug("safety_tips")), link_to_slug(:safety_tips, :class=>"nav-link"))
-            =li_with_active(current_page?(feedback_path), link_to("Contact", feedback_path, :class => "nav-link"))
-
-          
--if show_control_panel?
-  .container
-    .row
-      #control-panel.span12
-        .row
-          .span2.offset1
-            =link_to root_path, :id=>"big-home-icon" do
-              %i.icon-home
-          .span3    
-            %h3.control-panel-title
-              Account status
-            %p.control-panel-subtitle
-              -if current_user.validated?
-                Validated
-              -else
-                Not validated
-          .span3
-            =link_to user_needs_path(current_user), :class=>"control-panel-link" do
-              %h3.control-panel-title
-                My requests
-              %p.control-panel-subtitle
-                -if controller_name.needs? && action_name.show?
-                  =header_messages_badge(0)
-                -else
-                  =header_messages_badge(current_user.new_notification_count("my_requests"))
-          .span3
-            =link_to offers_path, :class=>"control-panel-link" do
-              %h3.control-panel-title
-                My offers
-              %p.control-panel-subtitle
-                -if controller_name.needs? && action_name.show?
-                  =header_messages_badge(0)
-                -else
-                  =header_messages_badge(current_user.new_notification_count("my_offers"))
-  
-  
+                  =t(:logout)  
+        %ul.nav.nav-intro.unstyled                
+          %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"        
+          %li=link_to_slug('About', :about, :class=>"intro-nav-link-about intro-nav-link")
+          %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")                            
+    =link_to_slug(:help, :class=>"help-link") do
+      %icon.icon-question-sign
+      Help
           
