fixed header links

--- a/app/views/layouts/logged_out/_body.html.haml
+++ b/app/views/layouts/logged_out/_body.html.haml
@@ -1,4 +1,4 @@
--body_tag(:'data-spy'=>"scroll", :'data-target' => ".header-intro", :'data-offset'=> 110) do
+-body_tag do
   =yield :foobar
   .main-wrapper
     =render("layouts/logged_out/header")
