--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,15 +83,13 @@
 }
 
 /*========== Font stuff ==========*/
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700);
-
 .subnav_link, #social_media_links ul li a  {
 	font-weight: 300;
 	font-size: 15px;
 	color: #777;
 }
 body, p {
-  font-family: open sans, helvetica, arial, sans-serif;
+  
   -webkit-font-smoothing:antialiased;
 }
 
@@ -1161,7 +1159,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   
   
   z-index: 100;
-  height: 116px;
+  height: 120px;
 }.controller_home .header-intro {
   margin-bottom: 0;
 }
@@ -1223,7 +1221,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   top:0;
   width:100%;
   height: 70px;
-  background: #fff;
+	background-position:center 66px;
   box-shadow: 1px 1px 10px rgba(0,0,0,0.3), 1px 1px 4px rgba(0,0,0,0.1);
 }
 .header-intro-fixed .logo-intro-link {
@@ -1268,10 +1266,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 	margin:  0 10px 0 50px;
 
 }
-.header-intro-fixed .intro-nav-link-login {
-  margin-top: 23px;
+.header-intro-fixed .intro-nav-link {
+	font-size: 16px;
 }
-
+.header-intro-fixed a.cta-intro {
+  font-size: 16px;
+  padding: 8px 10px;
+}
+.header-intro-fixed .help-link {
+	bottom: -28px;
+}
 a.intro-nav-link-about {
 
 }
@@ -1287,7 +1291,7 @@ a.intro-nav-link-security {
 }
 .help-link {
   position: absolute;
-  top: 108px;
+  bottom: -40px;
 	color: #fff;
 	background: #619a5f;
   padding: 1px 11px;
