--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1160,7 +1160,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   
   z-index: 100;
   height: 120px;
-}.controller_home .header-intro {
+}.controller_neighbourhoods .header-intro {
   margin-bottom: 0;
 }
 .header-intro-inner {
@@ -1272,6 +1272,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 .header-intro-fixed a.cta-intro {
   font-size: 16px;
   padding: 8px 10px;
+  font-weight: bold;
 }
 .header-intro-fixed .help-link {
 	bottom: -28px;
@@ -1325,6 +1326,7 @@ a.intro-nav-link-security {
   padding: 10px 15px;
   border-radius:3px;
   -webkit-border-radius:3px;
+  font-weight: bold;
   
   margin: 30px 0 0 20px;
 }
