Add button for email sharing

--- a/app/views/pre_registrations/_share_buttons.haml
+++ b/app/views/pre_registrations/_share_buttons.haml
@@ -5,4 +5,7 @@
   Share on Facebook
 =link_to "#", :class=>"share-btn twitter-share-btn btn" do
   %i.icon-twitter
-  Share on Twitter
+  Share on Twitter  
+=link_to "#", :class=>"share-btn email-share-btn btn" do
+  %i.icon-envelope-alt
+  Share on Email
