Changes for today

--- a/app/views/neighbourhoods/_share_buttons.html.haml
+++ b/app/views/neighbourhoods/_share_buttons.html.haml
@@ -3,9 +3,11 @@
 =link_to "#", :class=>"share-btn facebook-share-btn btn" do
   %i.icon-facebook
   Share on Facebook
+=facebook_share(:share_text => "blabla")
 =link_to "#", :class=>"share-btn twitter-share-btn btn" do
   %i.icon-twitter
   Share on Twitter  
+=twitter_share()
 =link_to "#", :class=>"share-btn email-share-btn btn" do
   %i.icon-envelope-alt
   Share on Email
