--- a/app/views/modals/_preregister_popup.html.haml
+++ b/app/views/modals/_preregister_popup.html.haml
@@ -18,31 +18,7 @@
       =link_to "Next >>", "#sign-up-popup-preregister", :class=>"cta-intro", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
     
 #sign-up-popup-preregister.modal.hide
-  =semantic_form_for(@pre_registration || PreRegistration.new) do |form|
-    .modal-header
-
-      %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
-        ×
-      %h3
-        Be part of it
-    .modal-body
-      .preregister-form
-        %p.popup-intro
-          =snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
-        
-          %form.form-horizontal
-            .control-group              
-              =form.input :postcode, :input_html => { :class=>'span2', :placeholder => "Postcode"}
-            .control-group
-              .controls
-                =form.input :name, :input_html => { :class=>'span4', :placeholder => "Name"}
-            .control-group
-              .controls
-                =form.input :email, :input_html => { :class=>'span4', :placeholder => "Email"}
-            .control-group
-              .controls
-                =form.commit_button "Go", :button_html => {:data => {}, :class => "btn btn-primary btn-large", :id => "new-pre-registration-form-submit"}
-                =link_to "Already registered?", "/login", :class=>"already-registered-link"
+  =render("modals/preregister_form")
                 
             
               
